@@ -8183,4 +8183,5 @@ EPRINTS-3.1-beta-2
 
 2009-04-17 tdb
  * Revised PluginFactory API to be more intuitive with existing API
+ * Refactored Plugin::Screen->list_items() to use new plugin API
 
